<resources>
    <string name="app_name">Technophile</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="facebook_app_id">1713483638769784</string>
    <string name="fb_login_protocol_scheme">fb1713483638769784</string>

    <string name="log_out">Log Out</string>
    <string name="sign_in_using">Sign In Using</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="facebook">FaceBook</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="create">Create</string>

</resources>